--- a/styles/compile/prominent-features.sass
+++ b/styles/compile/prominent-features.sass
@@ -32,16 +32,16 @@ div[is="prominent-features"]
     justify-items: center
 
     @include min($screen-s)
-      grid-template-columns: repeat(auto-fit, minmax(size(340), 1fr))
+      //grid-template-columns: repeat(auto-fill, minmax(size(340), 1fr), 1fr))
 
-  // @include min($screen-s)
-  //   > div
-  //     grid-template-columns: repeat(2, 1fr) fit-content(20%)
+  @include min($screen-s)
+    > div
+      grid-template-columns: repeat(2, minmax(size(340), size(480)))
     
-  //     &.one 
-  //       grid-template-columns: repeat(1, 1fr) fit-content(20%)
-  //     &.three 
-  //       grid-template-columns: repeat(3, 1fr) fit-content(20%)
-  //     &.four 
-  //       grid-template-columns: repeat(4, 1fr) fit-content(20%)
+      &.one 
+        grid-template-columns: repeat(1, minmax(size(300), size(480)))
+      &.three 
+        grid-template-columns: repeat(3, 1fr)
+      &.four 
+        grid-template-columns: repeat(4, 1fr)
   
